istio/split/exercise/app-0-0-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-demo-7-primary
  labels:
    app: go-demo-7
    release: primary
spec:
  selector:
    matchLabels:
      app: go-demo-7
      release: primary
  replicas: 3
  template:
    metadata:
      labels:
        app: go-demo-7
        release: primary
    spec:
      containers:
      - name: go-demo-7
        image: vfarcic/go-demo-7:0.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /demo/hello?health=true
            port: 8080
        readinessProbe:
          httpGet:
            path: /demo/hello?health=true
            port: 8080
        resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 128Mi
