istio/split/exercise/split100.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-demo-7-canary
  labels:
    app: go-demo-7
    release: canary
spec:
  selector:
    matchLabels:
      app: go-demo-7
      release: canary
  replicas: 0
  template:
    metadata:
      labels:
        app: go-demo-7
        release: canary
    spec:
      containers:
      - name: go-demo-7
        image: vfarcic/go-demo-7:0.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /demo/hello?health=true
            port: 8080
        readinessProbe:
          httpGet:
            path: /demo/hello?health=true
            port: 8080
        resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 128Mi

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-demo-7
spec:
  hosts:
  - go-demo-7.acme.com
  gateways:
  - go-demo-7
  http:
  - route:
    - destination:
        host: go-demo-7
        subset: canary
        port:
          number: 80
      weight: 0
      headers:
        request:
          set:
            release: canary
    - destination:
        host: go-demo-7
        subset: primary
        port:
          number: 80
      weight: 100
      headers:
        request:
          set:
            release: primary
